# Orbital

./: hi.txt  pyproject.toml  requirements.txt  run.py
flaskr/: __init__.py  actions.py  analyse.py  auth.py  confirm.py  initdb.py  menu.py  start.py
flaskr/static/: copy.js  generate.html  generate_output.js
flaskr/static/CSS/: add.css  analyse.css  confirm.css  delete.css  generate.css  home.css  login.css  main.css  register.css
flaskr/static/Scripts/: cancel.js  copy.js  delete_actions.js  generate_actions.js  generate_output.js  home_actions.js  home_copy.js  register_actions.js  show.js
flaskr/templates/: base.html  start.html
flaskr/templates/auth/: login.html  register.html
flaskr/templates/menu/: add.html  analyse.html  confirm.html  delete.html  generate.html  home.html
